# olivin-app

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  RUNME.md  Taskfile.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  frontend.instructions.md
backend/: .coverage  .gitattributes  .gitignore  pyproject.toml  test_token.py
backend/coverage/: lcov.info
backend/src/: .coverage  coverage.xml  schema.yaml
backend/src/apps/accounts/: admin.py  urls.py
backend/src/apps/accounts/managers/: __init__.py  user_manager.py
backend/src/apps/accounts/migrations/: 0001_initial.py
backend/src/apps/accounts/models/: __init__.py  address_model.py  profile_model.py  roles_model.py  user_model.py
backend/src/apps/accounts/schema/: __init__.py  address_schema.py  profile_schema.py
backend/src/apps/accounts/serializers/: __init__.py  address_serializer.py  profile_serializer.py
backend/src/apps/accounts/views/: __init__.py  address_view.py  profile_view.py
backend/src/apps/discounts/: apps.py
backend/src/apps/shipping/: apps.py
backend/src/common/: __init__.py  abstract_models.py
backend/src/core/: celery.py  envs.py  health.py  paths.py  storages.py  urls.py
backend/src/core/services/allauth/: selectors.py  social_adapter.py  tasks.py
backend/src/core/services/mail/: __init__.py  adapter.py  service.py  tasks.py  types.py
backend/src/core/settings/: __init__.py  base.py  development.py  local.py  production.py  testing.py
backend/src/core/settings/components/: __init__.py  apps.py  auth.py  celery.py  database.py  email.py  middleware.py  security.py  session.py  storage.py
backend/src/core/settings/components/allauth/: __init__.py  account.py  headless.py  mfa.py  socialaccount.py
backend/src/core/storage/: __init__.py  bucket_manager.py  storages.py  utils.py
backend/src/core/tests/: test_health.py
backend/src/core/utils/: __init__.py  allauth_schema_hook.py  health.py  logs.py
backend/src/core/utils/allauth/: __init__.py  allauth_views.py
backend/src/core/utils/auth/: __init__.py  csrf_urls.py  csrf_views.py
backend/src/core/utils/health/: __init__.py  schema.py  views.py
backend/src/coverage/: lcov.info
backend/src/tests/: conftest.py
backend/src/tests/accounts/: conftest.py  test_models.py  test_serializers.py  test_services.py  test_views.py
backend/src/tests/data/: accounts.json
backend/src/tests/factories/: accounts.py
backend/src/tests/integration/: conftest.py  test_health.py
backend/src/tests/shared/: __init__.py  load_json.py
bruno/: bruno.json
bruno/environments/: envs.bru
docker/backend/: Dockerfile
frontend/: .editorconfig  .expoignore  .gitignore  ARCH.md  app.config.js  app.json  babel.config.js  eslint.config.js  load-env.js  metro.config.js  orval.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: convert_path.sh  django-shell-plus.sh  run-emulator.sh
taskfiles/: backend.yml  db.yml  emulators.yml  frontend.yml  ovral.yml  packages.yml  shell.yml  test.yml
(+103 files in other folders)
