[project]
name = "backend"
version = "0.1.0"
description = "Backend dla aplikacji sklepowej"
readme = "README.md"
requires-python = ">=3.12.10"

# uv add <package>
# uv sync --all-extras
# uv lock
dependencies = [
    "boto3>=1.40.56",
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-allauth>=65.12.1",
    "django-celery-beat>=2.7.0",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "django-split-settings>=1.3.2",
    "django-storages>=1.14.6",
    "djangorestframework>=3.16.1",
    "djangorestframework-camel-case>=1.4.2",
    "djangorestframework-simplejwt>=5.3.0",
    "flower>=2.0.1",
    "pillow>=12.0.0",
    "psycopg2>=2.9.10 ; sys_platform == 'linux'",
    "psycopg2-binary>=2.9.10 ; sys_platform == 'win32'",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "stripe>=13.0.1",
    "rich>=14.2.0",
    "pack-logger",
]

# uv add <package> --optional dev
[project.optional-dependencies]
dev = [
    "ruff>=0.14.1",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.12.9
target-version = "py312"

[tool.ruff.per-file-ignores]
"*/settings/*.py" = ["F401", "F403", "F405"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.uv.sources]
pack-logger = { path = "../packages/pack-logger/backend", editable = true }
